--- a/mkdocs_bootstrap4/base.html
+++ b/mkdocs_bootstrap4/base.html
@@ -26,53 +26,17 @@
     {%- endblock %}
 
     {%- block styles %}
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-      <link href="{{ 'css/font-awesome.min.css' | url }}" rel="stylesheet">
-      <link href="{{ 'css/base.css' | url }}" rel="stylesheet">
-      {%- if config.theme.highlightjs %}
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/{{ config.theme.hljs_style }}.min.css">
-      {%- endif %}
-      {%- for path in config['extra_css'] %}
-        <link href="{{ path | url }}" rel="stylesheet">
-      {%- endfor %}
     {%- endblock %}
 
     {%- block libs %}
-      <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-      <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-      <![endif]-->
-
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-      {%- if config.theme.highlightjs %}
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-        {%- for lang in config.theme.hljs_languages %}
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/{{lang}}.min.js"></script>
-        {%- endfor %}
-        <script>hljs.initHighlightingOnLoad();</script>
-      {%- endif %}
-      <script src="{{ 'js/base.js' | url }}"></script>
+      <script src="{{ 'dist/bundle.js' | url }}"></script>
     {%- endblock %}
 
     {%- block analytics %}
-      {%- if config.google_analytics %}
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-          ga('create', '{{ config.google_analytics[0] }}', '{{ config.google_analytics[1] }}');
-          ga('send', 'pageview');
-        </script>
-      {%- endif %}
     {%- endblock %}
 
-    {%- block extrahead %} {% endblock %}
+    {%- block extrahead %}
+    {% endblock %}
   </head>
 
   <body class="{% if page and page.is_homepage %}homepage {% endif %}{%- if page and page.meta.jumbotron -%}has-jumbotron {%- endif -%}">
@@ -213,7 +177,6 @@
         var base_url = {{ base_url | tojson }};
         var shortcuts = {{ config.theme.shortcuts | tojson }};
       </script>
-      <script src="{{ 'js/base.js' | url }}" defer></script>
       {%- for path in config['extra_javascript'] %}
         <script src="{{ path | url }}" defer></script>
       {%- endfor %}
