--- a/mkdocs_bootstrap4/base.html
+++ b/mkdocs_bootstrap4/base.html
@@ -52,26 +52,29 @@
         <div class="collapse navbar-collapse">
           {%- block site_nav %}
             {%- if nav | length > 1 %}
-              <ul class="nav navbar-nav">
-                {%- for nav_item in nav %}
-                  {%- if nav_item.children %}
-                    <li class="nav-item dropdown{% if nav_item.active %} active{% endif %}">
-                      <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        {{ nav_item.title }} <b class="caret"></b>
-                      </a>
-                      <ul class="dropdown-menu">
-                        {%- for nav_item in nav_item.children %}
-                          {% include "nav-sub.html" %}
-                        {%- endfor %}
-                      </ul>
-                    </li>
-                  {%- else %}
-                    <li {% if nav_item.active %}class="active"{% endif %}>
-                      <a class="nav-link" href="{{ nav_item.url | url }}">{{ nav_item.title }}</a>
-                    </li>
-                  {%- endif %}
-                {%- endfor %}
-              </ul>
+              <nav class="nav">
+                <ul class="navbar-nav">
+                  {%- for nav_item in nav %}
+                    {%- if nav_item.children %}
+                      <li class="nav-item dropdown{% if nav_item.active %} active{% endif %}">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          {{ nav_item.title }} <b class="caret"></b>
+                        </a>
+
+                        <ul class="dropdown-menu">
+                          {%- for nav_item in nav_item.children %}
+                            {% include "nav-sub.html" %}
+                          {%- endfor %}
+                        </ul>
+                      </li>
+                    {%- else %}
+                      <li {% if nav_item.active %}class="active"{% endif %}>
+                        <a class="nav-link" href="{{ nav_item.url | url }}">{{ nav_item.title }}</a>
+                      </li>
+                    {%- endif %}
+                  {%- endfor %}
+                </ul>
+              </nav>
             {%- endif %}
           {%- endblock %}
 
