Focus the search input on modal show

--- a/mkdocs_bootstrap4/base.html
+++ b/mkdocs_bootstrap4/base.html
@@ -82,7 +82,7 @@
             {%- block search_button %}
               {%- if 'search' in config['plugins'] %}
                 <li class="nav-item">
-                  <a class="nav-link" href="#" data-toggle="modal" data-target="#mkdocs_search_modal">
+                  <a class="nav-link" href="#" data-toggle="modal" data-target="#mkdocs-search-modal">
                     <i class="fa fa-search"></i> Search
                   </a>
                 </li>
