--- a/mkdocs_bootstrap4/keyboard-modal.html
+++ b/mkdocs_bootstrap4/keyboard-modal.html
@@ -1,4 +1,4 @@
-<div class="modal" id="mkdocs_keyboard_modal" tabindex="-1" role="dialog" aria-labelledby="Keyboard Shortcuts Modal" aria-hidden="true">
+<div class="modal" id="mkdocs-keyboard-modal" tabindex="-1" role="dialog" aria-labelledby="Keyboard Shortcuts Modal" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
