--- a/mkdocs_bootstrap4/search-modal.html
+++ b/mkdocs_bootstrap4/search-modal.html
@@ -1,4 +1,4 @@
-<div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="Search Modal" aria-hidden="true">
+<div class="modal" id="mkdocs-search-modal" tabindex="-1" role="dialog" aria-labelledby="Search Modal" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
