Fix navbar to top of the page, not viewport
Refs #1

--- a/mkdocs_bootstrap4/base.html
+++ b/mkdocs_bootstrap4/base.html
@@ -40,7 +40,7 @@
   </head>
 
   <body class="{% if page and page.is_homepage %}homepage {% endif %}{%- if page and page.meta.jumbotron -%}has-jumbotron {%- endif -%}">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark navbar-fixed-top">
       <div class="container">
         {%- block site_name %}
           <a class="navbar-brand" href="{{ nav.homepage.url | url }}">{{ config.site_name }}</a>
